Created database for project

--- a/SWD62AEP2024/Presentation/appsettings.json
+++ b/SWD62AEP2024/Presentation/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Presentation-fcb978b3-e02d-424b-aa91-f5c07c0761bc;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-9E15KMRA\\SQLEXPRESS;Database=SWD62AEP2024;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
