Implemented Logs interface, renamed LogsRepo to LogsDbRepo as it saves the logs to the db. Created LogsFileRepo so the logs can be saved on a json file in our project.

--- a/SWD62AEP2024/Presentation/appsettings.json
+++ b/SWD62AEP2024/Presentation/appsettings.json
@@ -8,5 +8,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "logsSetting": "1",
+  "logsFileName":  "logs.json"
 }
